fixed horizontal scroll on navbar

--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,6 @@
 @import "tailwindcss";
+
+body {
+    max-height: 100vh;
+    max-width: 100vw;
+}
